tests/machine/x/fortran/short_circuit.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/short_circuit.f90:10:11:

   10 |     boom = .true.
      |           1
Warning: Extension: Conversion from LOGICAL(4) to INTEGER(4) at (1)
/workspace/mochi/tests/machine/x/fortran/short_circuit.f90:3:25:

    3 |   print *, (.false. .and. boom(1,2))
      |                         1
Error: Operands of logical operator ‘.and.’ at (1) are LOGICAL(4)/INTEGER(4)
/workspace/mochi/tests/machine/x/fortran/short_circuit.f90:4:23:

    4 |   print *, (.true. .or. boom(1,2))
      |                       1
Error: Operands of logical operator ‘.or.’ at (1) are LOGICAL(4)/INTEGER(4)

